# cbotpedago

./: .gitignore  CMakeLists.txt  README.md
src/: bot.c  bot.c.base
